--- a/02_aquino.html
+++ b/02_aquino.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,34 +77,38 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/bamaquino.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Aquino, Bam</h1>
-					<h2>KNP</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						Senator Bam Aquino, a social entrepreneur and former youth leader, advocates for the development of Filipino families by enacting specific laws pertaining to entrepreneurship and education. He is the originator of the historic Go Negosyo Act, which has created hundreds of Negosyo Centers across the country to assist ambitious company owners and small enterprises. He was the main proponent of the Universal Access to Quality Tertiary Education Act, which eliminated tuition at public universities, community colleges, and technical-vocational schools. Motivated by the conviction that individuals can overcome poverty with the correct assistance, Senator Aquino is still striving for the prosperity of every Filipino household.
-					</p>
-					
-					<br>
-						
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/aquino_bam_bio.asp">Senator Paolo Benigno "Bam" Aquino IV - Senate of the Philippines | web.senate.gov.ph</a></span>
-		
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+
+			<hr class="hr2">
+
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/bamaquino.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Aquino, Bam</h1>
+						<h2>KNP</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							Senator Bam Aquino, a social entrepreneur and former youth leader, advocates for the development of Filipino families by enacting specific laws pertaining to entrepreneurship and education. He is the originator of the historic Go Negosyo Act, which has created hundreds of Negosyo Centers across the country to assist ambitious company owners and small enterprises. He was the main proponent of the Universal Access to Quality Tertiary Education Act, which eliminated tuition at public universities, community colleges, and technical-vocational schools. Motivated by the conviction that individuals can overcome poverty with the correct assistance, Senator Aquino is still striving for the prosperity of every Filipino household.
+						</p>
+
+						<br>
+
+						</br>
+					</td>
+				</tr>
+			</table>
+
+			<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/	sen_bio/aquino_bam_bio.asp">Senator Paolo Benigno "Bam" Aquino IV - Senate of the Philippines | 	web.senate.gov.ph</a></span>
+		</div>
 	</body>
 </html>
