--- a/05_pangilinan.html
+++ b/05_pangilinan.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,34 +77,38 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/kiko.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Pangilinan, Kiko</h1>
-					<h2>LP</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						Senator Kiko Pangilinan, a graduate of Harvard's Kennedy School of Government and UP Law, started his political career more than three decades ago as a student activist opposing the dictatorship. His conviction in collaborative governance has led to significant legislation during his three terms in the Senate. He supported the agricultural industry via the Sagip Saka Act and wrote the Juvenile Justice and Welfare Act to establish a more compassionate system for young offenders. His support continued in his executive position as head of Food Security, where he was able to control crop pests and stabilize rice prices. In keeping with his lifelong dedication to creating a fair and inclusive democracy for all Filipinos, he is currently the leader of the Liberal Party and a leading supporter of the Free College Education law.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-					<br>
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
 			
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/pangilinan_bio.asp">Senator Kiko Pangilinan - Senate of the Philippines | web.senate.gov.ph</a></span>
-		
+			<hr class="hr2">
+			
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/kiko.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Pangilinan, Kiko</h1>
+						<h2>LP</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							Senator Kiko Pangilinan, a graduate of Harvard's Kennedy School of Government 	and UP Law, started his political career more than three decades ago as a 	student activist opposing the dictatorship. His conviction in collaborative 	governance has led to significant legislation during his three terms in the 	Senate. He supported the agricultural industry via the Sagip Saka Act and wrote 	the Juvenile Justice and Welfare Act to establish a more compassionate system 	for young offenders. His support continued in his executive position as head of 	Food Security, where he was able to control crop pests and stabilize rice 	prices. In keeping with his lifelong dedication to creating a fair and inclusive 	democracy for all Filipinos, he is currently the leader of the Liberal Party and 	a leading supporter of the Free College Education law.
+						</p>
+					
+						<br>
+					
+						</br>
+					</td>
+				</tr>
+			</table>
+			
+			<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/	sen_bio/pangilinan_bio.asp">Senator Kiko Pangilinan - Senate of the Philippines | web.senate.gov.	ph</a></span>
+		</div>
 	</body>
 </html>
