--- a/06_marcoleta.html
+++ b/06_marcoleta.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,33 +77,37 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/rodante.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Marcoleta, Rodante</h1>
-					<h2>IND</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						The guiding principle of Deputy House Speaker Rodante Marcoleta's public service is straightforward: laws are only effective when they are carried out correctly. His early years spent in a low-income Tarlac farming family, where he personally observed injustice, shaped this commitment and inspired him to pursue a career in law. When he joined Congress in 2004, he supported historic legislation that gave average families a better opportunity, such as the Magna Carta of the Poor, free college education, universal healthcare, and free irrigation. However, he insists that enacting laws is only the first step. In order to prevent corruption and guarantee that government programs actually help the most disadvantaged Filipinos, he thinks that Congress's ongoing monitoring is the most important task.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://mb.com.ph/2022/2/18/who-is-rodante-marcoleta">Manila Bulletin - Who is Rodante Marcoleta | mb.com.ph</a></span>
-		
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+			
+			<hr class="hr2">
+			
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/rodante.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Marcoleta, Rodante</h1>
+						<h2>IND</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							The guiding principle of Deputy House Speaker Rodante Marcoleta's public service 	is straightforward: laws are only effective when they are carried out correctly. 	His early years spent in a low-income Tarlac farming family, where he personally 	observed injustice, shaped this commitment and inspired him to pursue a career 	in law. When he joined Congress in 2004, he supported historic legislation that 	gave average families a better opportunity, such as the Magna Carta of the Poor, 	free college education, universal healthcare, and free irrigation. However, he 	insists that enacting laws is only the first step. In order to prevent 	corruption and guarantee that government programs actually help the most 	disadvantaged Filipinos, he thinks that Congress's ongoing monitoring is the 	most important task.
+						</p>
+					
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>
+			
+			<span class="reference">Reference: <a target="_blank" href="https://mb.com.ph/2022/2/18/	who-is-rodante-marcoleta">Manila Bulletin - Who is Rodante Marcoleta | mb.com.ph</a></span>
+		</div>
 	</body>
 </html>
