--- a/07_lacson.html
+++ b/07_lacson.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,34 +77,38 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/pingpingping.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Lacson, Ping</h1>
-					<h2>IND</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						Over the course of his more than fifty years in public service, Panfilo "Ping" Lacson has continuously upheld his belief in standing up for what is right and opposing what is wrong. He began his lengthy career in police enforcement, where he developed a reputation for being tough. He famously overhauled the Philippine National Police as its chief by suppressing dishonest "kotong cops" and enforcing rigorous discipline, which helped the PNP achieve its highest-ever public popularity ratings. After that, he spent eighteen years in the Senate, where he was most well-known for being the country's fiscal inspector. He passed important laws like the National ID System and steadfastly fought "pork barrel" expenditures, saving taxpayers billions of pesos. In addition to passing legislation, he oversaw the government's extensive post-Super Typhoon Yolanda rebuilding initiatives.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-					
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/lacson_bio.asp">Senator Panfilo "Ping" Lacson - Senate of the Philippines | web.senate.gov.ph</a></span>
-		
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+
+			<hr class="hr2">
+
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/pingpingping.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Lacson, Ping</h1>
+						<h2>IND</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							Over the course of his more than fifty years in public service, Panfilo "Ping" 	Lacson has continuously upheld his belief in standing up for what is right and 	opposing what is wrong. He began his lengthy career in police enforcement, where 	he developed a reputation for being tough. He famously overhauled the Philippine 	National Police as its chief by suppressing dishonest "kotong cops" and 	enforcing rigorous discipline, which helped the PNP achieve its highest-ever 	public popularity ratings. After that, he spent eighteen years in the Senate, 	where he was most well-known for being the country's fiscal inspector. He passed 	important laws like the National ID System and steadfastly fought "pork barrel" 	expenditures, saving taxpayers billions of pesos. In addition to passing 	legislation, he oversaw the government's extensive post-Super Typhoon Yolanda 	rebuilding initiatives.
+						</p>
+
+
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>
+
+			<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/	sen_bio/lacson_bio.asp">Senator Panfilo "Ping" Lacson - Senate of the Philippines | web.senate.	gov.ph</a></span>
+		</div>
 	</body>
 </html>
