--- a/08_sotto.html
+++ b/08_sotto.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,34 +77,38 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/tito.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Sotto, Tito</h1>
-					<h2>IND</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						As a successful artist, athlete, and prominent congressman, Vicente "Tito" Sotto III had one of the most unusual careers in Philippine public service. He was already well-known as a national bowling champion and the musical leader of the renowned band VST & Co. long before he entered politics. Additionally, he wrote the well-known 1986 EDSA Revolution anthem, "Magkaisa." He started his career in government in 1988 as the vice mayor of Quezon City, where he launched his well-known and protracted campaign against illegal drugs. He wrote more than 100 laws during his many years in the Senate, culminating a truly remarkable and diverse career that earned him the chamber's top position as Senate President.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+			
+			<hr class="hr2">
+			
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/tito.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Sotto, Tito</h1>
+						<h2>IND</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							As a successful artist, athlete, and prominent congressman, Vicente "Tito" Sotto 	III had one of the most unusual careers in Philippine public service. He was 	already well-known as a national bowling champion and the musical leader of the 	renowned band VST & Co. long before he entered politics. Additionally, he wrote 	the well-known 1986 EDSA Revolution anthem, "Magkaisa." He started his career in 	government in 1988 as the vice mayor of Quezon City, where he launched his 	well-known and protracted campaign against illegal drugs. He wrote more than 100 	laws during his many years in the Senate, culminating a truly remarkable and 	diverse career that earned him the chamber's top position as Senate President.
+						</p>
 					
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/sotto_bio.asp">Senator Vicente C. Sotto - Senate of the Philippines | web.senate.gov.ph</a></span>
-		
+						
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>
+			
+			<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/	sen_bio/sotto_bio.asp">Senator Vicente C. Sotto - Senate of the Philippines | web.senate.gov.ph</	a></span>
+		</div>
 	</body>
 </html>
