--- a/09_cayetano.html
+++ b/09_cayetano.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,33 +77,37 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/pia.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Pia, Cayetano</h1>
-					<h2>NP</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						Over the course of almost two decades, Senator Pia S. Cayetano has established a solid reputation as a vibrant and successful leader who is also an accomplished lawyer, economist, and devoted athlete. She has taken on significant reforms, supporting the historic CREATE Act to reduce corporate taxes and stimulate the economy. She was instrumental in the creation of the country's pandemic response legislation and spearheaded the Sin Tax Law, which generated money for public health. She has written legislation that protect children through improved adoption procedures and assist students with impairments since she is a fervent supporter of families and young people. Through policies like the Expanded Maternity Leave Law, she has also fought for the rights of working moms and student-athletes as a former national athlete.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/pcayetano_bio.asp">Senator Pia S. Cayetano - Senate of the Philippines | web.senate.gov.ph</a></span>
-		
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+			
+			<hr class="hr2">
+			
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/pia.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Pia, Cayetano</h1>
+						<h2>NP</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							Over the course of almost two decades, Senator Pia S. Cayetano has established a 	solid reputation as a vibrant and successful leader who is also an accomplished 	lawyer, economist, and devoted athlete. She has taken on significant reforms, 	supporting the historic CREATE Act to reduce corporate taxes and stimulate the 	economy. She was instrumental in the creation of the country's pandemic response 	legislation and spearheaded the Sin Tax Law, which generated money for public 	health. She has written legislation that protect children through improved 	adoption procedures and assist students with impairments since she is a fervent 	supporter of families and young people. Through policies like the Expanded 	Maternity Leave Law, she has also fought for the rights of working moms and 	student-athletes as a former national athlete.
+						</p>
+					
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>
+			
+			<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/	sen_bio/pcayetano_bio.asp">Senator Pia S. Cayetano - Senate of the Philippines | web.senate.gov.	ph</a></span>
+		</div>
 	</body>
 </html>
