--- a/10_villar.html
+++ b/10_villar.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,33 +77,38 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/villar.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Villar, Camille</h1>
-					<h2>NP</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						A leader of the new generation, Deputy Speaker Camille Villar skillfully combines her love of public service with her broad commercial expertise. She joined Congress in 2019 with a distinct viewpoint on the economy, having earned a Master's degree in Business Administration from Spain and working at the highest levels of her family's retail businesses. She makes advantage of this by assisting small businesses, particularly through her NEGOSENSO initiative, and by drafting legislation to enhance consumer protection from fraud, healthcare, and education. She is a true voice for today's issues since, while looking to the future, she also supports contemporary problems that have an impact on many Filipinos, such as raising awareness of mental health issues, combating teen pregnancy, and advocating for equal rights for the LGBTQIA+ community.
-					</p>
-
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://www.camillevillar.com/about/">About | Camille Villar | camillevillar.com</a></span>
-		
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+			
+			<hr class="hr2">
+			
+			
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/villar.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Villar, Camille</h1>
+						<h2>NP</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							A leader of the new generation, Deputy Speaker Camille Villar skillfully 	combines her love of public service with her broad commercial expertise. She 	joined Congress in 2019 with a distinct viewpoint on the economy, having earned 	a Master's degree in Business Administration from Spain and working at the 	highest levels of her family's retail businesses. She makes advantage of this by 	assisting small businesses, particularly through her NEGOSENSO initiative, and 	by drafting legislation to enhance consumer protection from fraud, healthcare, 	and education. She is a true voice for today's issues since, while looking to 	the future, she also supports contemporary problems that have an impact on many 	Filipinos, such as raising awareness of mental health issues, combating teen 	pregnancy, and advocating for equal rights for the LGBTQIA+ community.
+						</p>
+					
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>
+			
+			<span class="reference">Reference: <a target="_blank" href="https://www.camillevillar.com/about/	">About | Camille Villar | camillevillar.com</a></span>
+		</div>
 	</body>
 </html>
