--- a/11_lapid.html
+++ b/11_lapid.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,33 +77,37 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/lito.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Lapid, Lito</h1>
-					<h2>NPC</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						Known to many as the "Bida ng Masa," Senator Manuel "Lito" Lapid is a well-known action star who has spent his lengthy tenure in the Senate demonstrating that hard work is more important than formal education. He dispelled early skepticism by consistently filing hundreds of measures each term, making him one of the chamber's most productive members. The common Filipino has always been the focus of his legislative efforts. His Free Legal Assistance Act, which provides much-needed legal services to the impoverished, is a significant achievement. In addition, he was a key contributor to the Kindergarten Education Act and has advocated for increased funding for neighborhood sports leagues and tourism. He has proven to be a trustworthy advocate for the people he represents by working hard.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/sen_bio/lapid_bio.asp">Senator Manuel "Lito" M. Lapid - Senate of the Philippines | web.senate.gov.ph</a></span>
-		
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+			
+			<hr class="hr2">
+			
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/lito.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Lapid, Lito</h1>
+						<h2>NPC</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">	
+						<p>	
+								Known to many as the "Bida ng Masa," Senator Manuel "Lito" Lapid is a well-known 	action star who has spent his lengthy tenure in the Senate demonstrating that 	hard work is more important than formal education. He dispelled early skepticism 	by consistently filing hundreds of measures each term, making him one of the 	chamber's most productive members. The common Filipino has always been the focus 	of his legislative efforts. His Free Legal Assistance Act, which provides 	much-needed legal services to the impoverished, is a significant achievement. In 	addition, he was a key contributor to the Kindergarten Education Act and has 	advocated for increased funding for neighborhood sports leagues and tourism. He 	has proven to be a trustworthy advocate for the people he represents by working 	hard.
+							</p>
+					
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>	
+			
+			<span class="reference">Reference: <a target="_blank" href="https://web.senate.gov.ph/senators/	sen_bio/lapid_bio.asp">Senator Manuel "Lito" M. Lapid - Senate of the Philippines | web.senate.	gov.ph</a></span>
+		</div>
 	</body>
 </html>
