--- a/12_marcos.html
+++ b/12_marcos.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="UTF-8">
 		
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		
 		<style>		
@@ -74,33 +77,37 @@
 	</head>
 	
 	<body>
-		<h2><a href="index.html">BACK</a></h2>
-		
-		<hr class="hr2">
-		
-		<table class="container">
-			<tr> <td>
-					<img src="src/img/marcos.png"></img>
-				</td>
-			</tr>
-			<tr> <td>
-					<h1>Marcos, Imee</h1>
-					<h2>NP</h2>
-				</td>
-			</tr>
-			<tr>
-				<td class="cndd_info">
-					<p>
-						Senator Imee Marcos, a member of the well-known Marcos political family, is currently in her second term in the Senate. Her lengthy political career started under her father's leadership and continued after her family returned from exile. She served three terms as governor of Ilocos Norte and then as a congresswoman before winning a seat in the Senate in 2019. She has been involved in a number of major issues over her career. Among these are disagreements over her educational background, since other universities contest her graduation claims. She has also been connected to reported misappropriation of provincial finances and purported financial irregularities concerning offshore trusts. Senator Marcos is the chair of a number of committees in the current Congress, including those that deal with social justice, rural development, foreign policy, and welfare.
-					</p>
+       <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
-					<br>
-					</br>
-				</td>
-			</tr>
-		</table>
-		
-		<span class="reference">Reference: <a target="_blank" href="https://www.rappler.com/people/p69315340-imee-marcos/">Imee Marcos | rappler.com</a></span>
-		
+		<div class="container2">
+			<h2><a href="index.html">BACK</a></h2>
+
+			<hr class="hr2">
+
+			<table class="container">
+				<tr> <td>
+						<img src="src/img/marcos.png"></img>
+					</td>
+				</tr>
+				<tr> <td>
+						<h1>Marcos, Imee</h1>
+						<h2>NP</h2>
+					</td>
+				</tr>
+				<tr>
+					<td class="cndd_info">
+						<p>
+							Senator Imee Marcos, a member of the well-known Marcos political family, is 	currently in her second term in the Senate. Her lengthy political career started 	under her father's leadership and continued after her family returned from 	exile. She served three terms as governor of Ilocos Norte and then as a 	congresswoman before winning a seat in the Senate in 2019. She has been involved 	in a number of major issues over her career. Among these are disagreements over 	her educational background, since other universities contest her graduation 	claims. She has also been connected to reported misappropriation of provincial 	finances and purported financial irregularities concerning offshore trusts. 	Senator Marcos is the chair of a number of committees in the current Congress, 	including those that deal with social justice, rural development, foreign 	policy, and welfare.
+						</p>
+
+						<br>
+						</br>
+					</td>
+				</tr>
+			</table>
+
+			<span class="reference">Reference: <a target="_blank" href="https://www.rappler.com/people/	p69315340-imee-marcos/">Imee Marcos | rappler.com</a></span>
+		</div>
 	</body>
 </html>
