--- a/about.html
+++ b/about.html
@@ -77,38 +77,36 @@
 	</head>
 	
 	<body>
-       <!-- Bootstrap JS -->
+        <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg bg-primary" style="background: linear-gradient(180deg,rgba(244, 244, 220, 1) 0%, rgba(253, 253, 210, 1) 100%);" data-bs-theme="light" id="drop_shadow">
+            <!-- Brand name -->
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">PH Senatorial Candidates 2025</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Navbar Items -->
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="index.html">Candidates</a>
+                        <a class="nav-link active" aria-current="page" href="#">About & Contact</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+		
 		<div class="container2">
-			<h2><a href="index.html">BACK</a></h2>
+			<h1>About</h1>
+			<p>This webpage serves as a primer for the backgrounds of each candidate that has made into the Top 12 for the Senatorial Elections.</p>
 
-			<hr class="hr2">
+            <div class="medium-space"></div>
 
-			<table class="container">
-				<tr> <td>
-						<img src="src/img/bonggo.png"></img>
-					</td>
-				</tr>
-				<tr> <td>
-						<h1>Go, Bong Go</h1>
-						<h2>PDPLBN</h2>
-					</td>
-				</tr>
-				<tr>
-					<td class="cndd_info">
-						<p>
-							In 2019, Senator Christopher "Bong" Go was elected to the Senate, bringing with 	him more than 20 years of public service as former President Rodrigo Duterte's 	loyal adviser. He is the primary author of the Malasakit Centers Act and, in his 	capacity as Chairman of the Senate Committee on Health, has pushed for the 	construction of many public hospitals and Super Health Centers to improve access 	to healthcare. A prolific lawmaker, he has also written important laws that 	modernized the Bureau of Fire Protection, established the National Academy of 	Sports, and created the Department of Migrant Workers. Senator Go continues to 	promote disaster resilience, better local governance, and a government that 	truly cares about the Filipino people while flying the Tapang at Malasakit 	banner.
-						</p>
-
-						<br>
-
-						</br>
-					</td>
-				</tr>
-			</table>
-
-			<span class="reference">Reference: <a target="_blank" href="https://senatorbonggo.ph/about">Who 	is Bong Go? | senatorbonggo.ph</a></span>
+            <h1>Contact</h1>
+            <p>Please send inquiries, suggestions, etc. through this e-mail:</p>
+            <h4><a href="mailto:202410808@fit.edu.ph">202410808@fit.edu.ph</a></h4>
 		</div>
 	</body>
 </html>
